# GTA-Pilot

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  build-native.ps1  compile_commands.json  copilot-instructions.md  pyproject.toml  pyrightconfig.json  requirements.txt
gtap/: coordinator.py
gtap/coordinator/: coordinator.py
gtap/display_capture/: display_capture.py
gtap/process/: process.py
gtapilot/: config.py  main.py
gtapilot/blackbox/: blackbox.py
gtapilot/coordinator/: __init__.py  coordinator.py  process.py
gtapilot/display_capture/: __init__.py  display_capture.py  display_override.py
gtapilot/ipc/: __init__.py  messaging.py  vision_ipc.py
gtapilot/models/: orchestrator.py  yolopv2.py
gtapilot/native/: CMakeLists.txt  vcpkg.json
gtapilot/native/display_capture/: CMakeLists.txt  DisplayCaptureDX11.cpp
gtapilot/native/gpu_service/: CMakeLists.txt  GpuService.cpp
gtapilot/scripts/: build_native.ps1
gtapilot/visualization/: visualization.py
gtapilot/visualizer/: visualizer.py
tools/: sanitize_compile_commands.py
