[project]
name = "gtapilot"
version = "0.1.0"
description = ""
authors = [{ name = "Michael Wang", email = "41971562+devmwang@users.noreply.github.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "bettercam>=1.0.0",
    "opencv-python>=4.11.0.86",
    "setproctitle>=1.3.3,<2",
    "zmq>=0.0.0",
]

[project.urls]
Repository = "https://github.com/devmwang/GTAP"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
